# Kolourmatica

./: .gitignore  CMakeLists.txt  README.md  SConstruct  TODO
src/core/: AdaptationMethod.hpp  BaseRGB.hpp  ChromaticAdaptation.cpp  ChromaticAdaptation.hpp  ColourSpace.hpp  Colour_LCHab.cpp  Colour_LCHab.hpp  Colour_LCHuv.cpp  Colour_LCHuv.hpp  Colour_Lab.cpp  Colour_Lab.hpp  Colour_Luv.cpp  Colour_Luv.hpp  Colour_RGB.hpp  Colour_XYZ.cpp  Colour_XYZ.hpp  Colour_xyY.cpp  Colour_xyY.hpp  Conversion.hpp  Convert.cpp  Convert.hpp  ForwardDeclarations.hpp  Illuminant.cpp  Illuminant.hpp  Kolourmatica.cpp  LinearRGB.hpp  Manager.cpp  Manager.hpp  RGB.cpp  RGB.hpp  ReferenceWhite.hpp  Space_AdobeRGB.hpp  Space_AppleRGB.hpp  Space_BestRGB.hpp  Space_BetaRGB.hpp  Space_BruceRGB.hpp  Space_CIE.hpp  Space_CIERGB.hpp  Space_ColorMatch.hpp  Space_ColorMatchRGB.hpp  (+31 more)
src/gui/: Console.cpp  Console.hpp  ConversionConsole.cpp  ConversionConsole.hpp  ConversionTab.cpp  ConversionTab.hpp  Kolourmatica.cpp  MainWindow.cpp  MainWindow.hpp  Typedefs.hpp  View.cpp  View.hpp  Viewer.cpp  Viewer.hpp
src/gui/view/: Render.cpp  Render.hpp  View.cpp  View.hpp  Viewport.cpp  Viewport.hpp
src/moc/: moc_ConversionConsole.cpp  moc_View.cpp
